tests/macro-tests/cases/widget_new/malformed_property_path2.stderr
error: expected `=`
 --> cases/widget_new/malformed_property_path2.rs:6:15
  |
6 |         margin! = 0;
  |               ^
